[gd_scene load_steps=29 format=2]

[ext_resource path="res://Sprites/character_spritesheet_16x16.png" type="Texture" id=1]
[ext_resource path="res://Assets/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Animations/Slash/Slash.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Player/ActionArea.gd" type="Script" id=4]
[ext_resource path="res://Assets/Animations/damage_anim.tres" type="Animation" id=5]
[ext_resource path="res://Sprites/Get_Weapon_Icons.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Weapons_nobg_16x16.png" type="Texture" id=7]
[ext_resource path="res://Assets/Player/Shield_Area.gd" type="Script" id=8]

[sub_resource type="CanvasItemMaterial" id=15]
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Animation" id=1]
resource_name = "Nova Animação"

[sub_resource type="Animation" id=16]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 12 ]
}

[sub_resource type="Animation" id=8]
resource_name = "action"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 8, 7, 9, 8, 9, 8 ]
}

[sub_resource type="Animation" id=10]
resource_name = "action_down"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 14, 14, 12 ]
}

[sub_resource type="Animation" id=11]
resource_name = "action_left"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 23, 23, 21 ]
}

[sub_resource type="Animation" id=12]
resource_name = "action_right"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 41, 41, 39 ]
}

[sub_resource type="Animation" id=13]
resource_name = "action_up"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 32, 32, 30 ]
}

[sub_resource type="Animation" id=14]
resource_name = "get_item"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 2.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 20, 29, 38, 12, 20, 29, 38, 11, 10 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.8, 2.7 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "show_get_item"
}, {
"args": [  ],
"method": "hide_get_item"
} ]
}

[sub_resource type="Animation" id=17]
resource_name = "heal_anim"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.4, 1 ),
"transitions": PoolRealArray( 1, 1, 0.0358968, 0.0358968 ),
"update": 0,
"values": [ Color( 0, 1, 0, 1 ), Color( 0, 1, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=20]
resource_name = "intro_anim"
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 27, 28, 29, 30, 27, 28, 29, 30, 27, 28, 29, 30, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 95, 128 ), Vector2( 95, 100 ) ]
}

[sub_resource type="Animation" id=21]
resource_name = "use_magic"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 20, 29, 38, 12, 20, 29, 38, 11 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "show_get_item"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "walk_down"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "walk_left"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 19 ]
}

[sub_resource type="Animation" id=2]
resource_name = "walk_right"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 36, 39, 38, 37 ]
}

[sub_resource type="Animation" id=5]
resource_name = "walk_up"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 27, 28, 29, 30 ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4, 5.5 )

[sub_resource type="CircleShape2D" id=7]
radius = 8.0

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 9.5, 8.44445 )

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 9.6, 8.95833 )

[node name="Player" type="KinematicBody2D"]
z_index = 1
collision_mask = 9
moving_platform_apply_velocity_on_leave = 1
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 15 )
texture = ExtResource( 1 )
hframes = 9
vframes = 5
frame = 12
__meta__ = {
"_edit_lock_": true
}

[node name="PlayerAnimation" type="AnimationPlayer" parent="."]
"anims/Nova Animação" = SubResource( 1 )
anims/RESET = SubResource( 16 )
anims/action = SubResource( 8 )
anims/action_down = SubResource( 10 )
anims/action_left = SubResource( 11 )
anims/action_right = SubResource( 12 )
anims/action_up = SubResource( 13 )
anims/damage_anim = ExtResource( 5 )
anims/get_item = SubResource( 14 )
anims/heal_anim = SubResource( 17 )
anims/intro_anim = SubResource( 20 )
anims/use_magic = SubResource( 21 )
anims/walk_down = SubResource( 4 )
anims/walk_left = SubResource( 6 )
anims/walk_right = SubResource( 2 )
anims/walk_up = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1.5 )
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Player_Body" type="Area2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player_Body"]
position = Vector2( 0, 1 )
shape = SubResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="Action_Area" type="Area2D" parent="."]
scale = Vector2( 0.625, 0.5625 )
script = ExtResource( 4 )

[node name="action" parent="Action_Area" instance=ExtResource( 3 )]

[node name="AreaCollision" type="CollisionShape2D" parent="Action_Area"]
shape = SubResource( 18 )

[node name="Shield_Area" type="Area2D" parent="."]
position = Vector2( 0, 8 )
scale = Vector2( 0.625, 0.5625 )
collision_layer = 12
collision_mask = 12
script = ExtResource( 8 )

[node name="Shield_Sprite" type="Sprite" parent="Shield_Area"]
position = Vector2( -9.53674e-07, -1.77778 )
scale = Vector2( 1.8, 1.8 )
texture = ExtResource( 7 )
hframes = 8
vframes = 6
frame = 26

[node name="Shield_Area_Collision" type="CollisionShape2D" parent="Shield_Area"]
position = Vector2( -3.8147e-07, -0.0694447 )
shape = SubResource( 19 )

[node name="AP_Timer" type="Timer" parent="."]

[node name="Dash_Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Invincible_Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="Get_Item_Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 9 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )
hframes = 7
frame = 5

[connection signal="area_entered" from="Player_Body" to="." method="_on_Player_Body_area_entered"]
[connection signal="body_entered" from="Player_Body" to="." method="_on_PlayerBody_body_entered"]
[connection signal="body_exited" from="Player_Body" to="." method="_on_PlayerBody_body_exited"]
[connection signal="body_entered" from="Action_Area" to="." method="_on_ActionArea_body_entered"]
[connection signal="body_entered" from="Shield_Area" to="Shield_Area" method="_on_Shield_Area_body_entered"]
[connection signal="timeout" from="AP_Timer" to="." method="_on_AP_Timer_timeout"]
[connection signal="timeout" from="Dash_Timer" to="." method="_on_Dash_Timer_timeout"]
[connection signal="timeout" from="Invincible_Timer" to="." method="_on_Invincible_Timer_timeout"]
